A.F....... [ZBX-5074] redesign configuration of action (Eduard)
..F....... [ZBX-1357] updated Brazilian Portuguese, French, Japanese, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
..F....... [ZBXNEXT-1019] updated jQuery to 1.7.2 and jQuery UI to 1.8.20 (Vedmak)
..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)

Bug fixes:
A......... [ZBX-5208] fixed updating interfaces via host.massupdate (Pavels)
A......... [ZBX-5208] fixed main interface validation in hostinterface.massremove (Pavels)
A......... [ZBX-5208] fixed host.update only accepting arrays of interfaces and not working with a single interface (Pavels)
..F....... [ZBX-5237] fixed event CSV export (Pavels)
..F....... [ZBX-5179] fixed filter layout on low resolution screens (Pavels)
..F....... [ZBX-3853] changed several message strings (Pavels)
A......... [ZBX-5213] fixed usergroup.massupdate failing when updating only permissions or users (Pavels)
..F....... [ZBX-5145] fixed PosgreSQL error when inserting an audit record if the X_FORWARDED_FOR header value is too long (Pavels)
..F....... [ZBX-5065] fixed cannot delete a service with soft linked dependencies (Toms)
A.F....... [ZBX-5065] added circularity check for IT services (Toms)
..F....... [ZBX-2501] fixed subnodes not opening when parent node is opened in IT services (Toms)
..F....... [ZBX-2506] fixed ordering for dashboard filter; fixed multisort function (Toms)
A......... [ZBX-5079] fixed returning triggers and graphs with no permissions and incorrect counts for templates (Toms)
..F....... [ZBX-2854] fixed table sorting icon positioning (Toms)
..F....... [ZBX-5107] fixed in popup it is possible to select more than once (Toms)
...G...... [ZBX-5094] removed trailing backslash from return value {#FSNAME} by Windows agent (Sasha)
..F....... [ZBX-5188] fixed incorrect graph themes being used for graphs from child nodes (Pavels)